--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de Sesión</title>
-    <link rel="stylesheet" href="./css/inicio_sesion.css">
+    <link rel="stylesheet" href="./css/main.css">
       <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Iconos de Google Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
@@ -21,14 +23,23 @@
     <!-- Formulario de inicio de sesión -->
      <div class="center-align" style="margin-top: 30px; margin-bottom: 20px;">
     <form action="#" method="post">
+
+        <div class="input-field">
+        <i class="material-icons prefix">person</i>
+        <input type="text" id="user" name="user" required>
+        <br>
         <label style="color: black;" for="user"> Usuario </label>
         <br>
-        <input type="text" id="user" name="user" required>
+        </div>
+
+        <div class="input-field">
+        <i class="material-icons prefix">lock</i>
+        <input type="password" id="password" name="password" required>
         <br>
         <label style="color: black;" for="password"> Contraseña </label>
         <br>
-        <input type="password" id="password" name="password" required>
-        <br>
+        </div>
+
         <a href="recuperacion.html"> Recuperar contraseña </a>
         <br>
         <p>
@@ -45,16 +56,26 @@
 
     <!-- Botones de inicio de sesión con redes sociales -->
     <div class="center-align" style="margin-top: 30px; margin-bottom: 20px;">
-    <a href="https://accounts.google.com/ServiceLogin?service=mail"> 
-        <button class="btn red lighten-1" type="button"> Inicio con Google </button>
+        <div class="input-field">
+            <a href="https://accounts.google.com/ServiceLogin?service=mail"> 
+        <button class="btn red lighten-1" type="button"> 
+        <i class="material-icons left">email</i>
+            Inicio con Google </button>
     </a>
+    </div>
+
     <br>
     <br>
-    <a href="https://www.facebook.com/login.php">
-        <button class="btn blue lighten-1" type="button"> Inicio con Facebook </button>
+    <div class="input-field">
+           <a href="https://www.facebook.com/login.php">
+        <button class="btn blue lighten-1" type="button"> 
+        <i class="material-icons left">facebook</i>
+         Inicio con Facebook </button>
     </a>
+    </div>
     <br>
     <br>
+
     <a href="registro.html">
         <button class="btn green lighten-1" type="button"> Registrarme </button>
     </a>  
@@ -62,6 +83,7 @@
 
     </div>
 
+    <!-- Pie de página -->
     <footer>
         <p class="center" style="margin-bottom: 0;">&copy; 2025 Joyería Los Álcazares. Todos los derechos reservados.</p>
     </footer>
