--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -16,7 +16,7 @@
 
     <!-- Encabezado de la página -->
      <div class="center center-align" style="margin-top: 30px;">
-    <img src="./images/AvatarJMH.png" alt="¡Bienvenido!" width="200" height="200">
+    <img src="./images/Joyeria.jpeg" alt="¡Bienvenido!" width="200" height="200">
     <br>
     </div>
 
