--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="container inicio_sesion amber lighten-5" style="margin-top: 20px; padding: 20px; border-radius: 10px;">  
+    <div class="container inicio_sesion amber lighten-5" style="margin-top: 0px; padding: 20px; border-radius: 10px;">  
 
     <!-- Encabezado de la página -->
      <div class="center center-align" style="margin-top: 30px;">
@@ -24,6 +24,7 @@
      <div class="center-align" style="margin-top: 30px; margin-bottom: 20px;">
     <form action="#" method="post">
 
+    <!-- Campo de usuario -->
         <div class="input-field">
         <i class="material-icons prefix">person</i>
         <input type="text" id="user" name="user" required>
@@ -32,6 +33,7 @@
         <br>
         </div>
 
+    <!-- Campo de contraseña -->
         <div class="input-field">
         <i class="material-icons prefix">lock</i>
         <input type="password" id="password" name="password" required>
@@ -40,9 +42,12 @@
         <br>
         </div>
 
-        <a href="recuperacion.html"> Recuperar contraseña </a>
+    <!-- Enlace para recuperar contraseña -->
+        <a href="recuperation.html"> Recuperar contraseña </a>
         <br>
         <p>
+
+    <!-- Checkbox para recordar sesión -->
       <label>
         <input style="color: black;" type="checkbox" />
         <span> ¡Recuerdame! </span>
@@ -74,7 +79,7 @@
     <br>
     <br>
 
-    <a href="registro.html">
+    <a href="register.html">
         <button class="btn green lighten-1" type="button"> Registrarme </button>
     </a>  
     </div>
