--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="container registro amber lighten-5" style="min-height: 100vh; max-width: auto; margin-top: 20px; padding: 20px; border-radius: 10px;">  
+    <div class="container registro amber lighten-5" style="margin-top: 0px; padding: 20px; border-radius: 10px;">  
 
         <!-- Encabezado de la página -->
         <div class="center-align" style="margin-top: 20px;">
@@ -54,13 +54,13 @@
 
                 <p> Al crear tu cuenta, estás aceptando el tratamiento de datos conforme a la política de Ley de Datos vigente. </p>
 
-                <input type="submit" value="Siguiente">
+                <input type="submit" value="Siguiente" onclick="window.location.href='credentials.html'">
             </form>
         </div>
 
         <!-- Enlace para volver al inicio de sesión -->
         <div class="center-align" style="margin-top: 30px; margin-bottom: 20px;">
-            <a href="inicio_sesion.html"> Volver al Inicio de Sesión </a>
+            <a href="login.html"> Volver al Inicio de Sesión </a>
         </div>
 
     </div>
