--- a/confirmation.html
+++ b/confirmation.html
@@ -12,7 +12,7 @@
 </head>
 <body> 
 
-    <div class="container confirmacion amber lighten-5" style="min-height: 100vh; max-width: auto; margin-top: 20px; padding: 20px; border-radius: 10px;">  
+    <div class="container confirmacion amber lighten-5" style="margin-top: 0px; padding: 20px; border-radius: 10px;">  
 
         <!-- Encabezado de la página --> 
         <div class="center-align" style="margin-top: 20px;">
