Última Actualización de la parte Login y Registro del FrontEnd

--- a/register.html
+++ b/register.html
@@ -67,7 +67,7 @@
 
     <!-- Pie de página -->
     <footer>
-        <p class="center" style="margin-bottom: 0;">&copy; 2025 Joyería Los Álcazares. Todos los derechos reservados.</p>
+       &copy; 2025 Joyería Los Álcazares. Todos los derechos reservados.
     </footer>
 
      <!-- Compiled and minified JavaScript -->
