--- a/credentials.html
+++ b/credentials.html
@@ -47,7 +47,7 @@
                 <br>
                 <br>
 
-                <input type="submit" value="Registrarme"> 
+                <input type="submit" value="Registrarme" onclick="window.location.href='confirmation.html'"> 
             </form>
         </div>
 
@@ -74,7 +74,7 @@
 
     <!-- Pie de página -->
     <footer>
-        <p class="center" style="margin-bottom: 0;">&copy; 2025 Joyería Los Álcazares. Todos los derechos reservados.</p>
+        &copy; 2025 Joyería Los Álcazares. Todos los derechos reservados.
     </footer>
 
      <!-- Compiled and minified JavaScript -->
