--- a/registro.html
+++ b/registro.html
@@ -3,75 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Registro </title>
+    <title>Registrarse - Joyería Los Alcazares</title>
     <link rel="stylesheet" href="./css/main.css">
-      <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Iconos de Google Material Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
-    <div class="container registro amber lighten-5" style="min-height: 100vh; max-width: auto; margin-top: 20px; padding: 20px; border-radius: 10px;">  
+    <main class="form-container">
+        <h2>Registrarse</h2>
+        
+        <form action="crear_credenciales.html" method="get"> <!-- Apunta al siguiente paso -->
+            <div class="input-group">
+                <label for="nombre">Nombre(s)</label>
+                <i class="fa-solid fa-user input-icon"></i>
+                <input type="text" id="nombre" name="nombre" placeholder="Ingresa aquí tu nombre" required>
+            </div>
+            <div class="input-group">
+                <label for="apellido">Apellido(s)</label>
+                <i class="fa-solid fa-user input-icon"></i>
+                <input type="text" id="apellido" name="apellido" placeholder="Ingresa aquí tus apellidos" required>
+            </div>
+            <div class="input-group">
+                <label for="direccion">Dirección</label>
+                <i class="fa-solid fa-house input-icon"></i>
+                <input type="text" id="direccion" name="direccion" placeholder="Ingresa aquí tu dirección" required>
+            </div>
+            <div class="input-group">
+                <label for="telefono">Teléfono</label>
+                <i class="fa-solid fa-phone input-icon"></i>
+                <input type="tel" id="telefono" name="telefono" placeholder="Ingresa aquí tu teléfono" required>
+            </div>
+            <div class="input-group">
+                <label for="email">Correo electrónico</label>
+                <i class="fa-solid fa-envelope input-icon"></i>
+                <input type="email" id="email" name="email" placeholder="Ingresa aquí tu Email" required>
+            </div>
 
-        <!-- Encabezado de la página -->
-        <div class="center-align" style="margin-top: 20px;">
-            <h2> Registrarse </h2>
-        </div> 
+            <p class="subtitle" style="font-size: 0.8em; text-align: left; margin-top: 15px;">
+                Al crear tu cuenta, estas aceptando el tratamiento de tus datos personales conforme a la política de Ley de datos vigente.
+            </p>
 
-        <!-- Formulario de registro -->
-        <div class="center-align" style="margin-top: 30px; margin-bottom: 20px;">
-            <form action="#" method="post">
-                <div class="input-field">
-                    <i class="material-icons prefix">person</i>
-                    <input type="text" id="name" name="name" required>
-                    <label style="color: black;" for="name"> Nombre(s) </label>
-                </div>
+            <button type="submit" class="btn btn-primary">Siguiente</button>
+        </form>
+    </main>
 
-                <div class="input-field">
-                    <i class="material-icons prefix">person</i>
-                    <input type="text" id="last_name" name="last_name" required>
-                    <label style="color: black;" for="last_name"> Apellido(s) </label>
-                </div>
-
-                <div class="input-field">
-                    <i class="material-icons prefix">home</i>
-                    <input type="text" id="address" name="address" required>
-                    <label style="color: black;" for="address"> Dirección </label>
-                </div>
-
-                <div class="input-field">
-                    <i class="material-icons prefix">phone</i>
-                    <input type="text" id="telephone" name="telephone" required>
-                    <label style="color: black;" for="telephone"> Teléfono </label>
-                </div>
-
-                 <div class="input-field">
-                    <i class="material-icons prefix"> email </i>
-                    <input type="text" id="email" name="email" required>
-                    <label style="color: black;" for="email"> Correo Electrónico </label>
-                </div>
-
-                <p> Al crear tu cuenta, estás aceptando el tratamiento de datos conforme a la política de Ley de Datos vigente. </p>
-
-                <input type="submit" value="Siguiente">
-            </form>
-        </div>
-
-        <!-- Enlace para volver al inicio de sesión -->
-        <div class="center-align" style="margin-top: 30px; margin-bottom: 20px;">
-            <a href="inicio_sesion.html"> Volver al Inicio de Sesión </a>
-        </div>
-
-    </div>
-
-    <!-- Pie de página -->
     <footer>
-        <p class="center" style="margin-bottom: 0;">&copy; 2025 Joyería Los Álcazares. Todos los derechos reservados.</p>
+        <p>© 2025 Joyería Los Álcazares. Todos los derechos reservados.</p>
     </footer>
 
-     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    
 </body>
 </html>
