--- a/recuperacion.html
+++ b/recuperacion.html
@@ -12,7 +12,7 @@
         <h2>Recuperar contraseña</h2>
         <p class="subtitle">Para recuperar tu contraseña, es necesario que ingreses tu usuario o correo electrónico previamente registrado.</p>
         
-        <form action="confirmacion.html" method="get">
+        <form action="confirmacion.html" method="get" class="formRecuperacion">
             <div class="input-group">
                 <label for="usuario">Usuario</label>
                 <i class="fa-solid fa-user input-icon"></i>
@@ -20,9 +20,9 @@
             </div>
 
             <div class="input-group">
-                <label for="email">Correo electrónico</label>
+                <label for="emailRecuperacion">Correo electrónico</label>
                 <i class="fa-solid fa-envelope input-icon"></i>
-                <input type="email" id="email" name="email" placeholder="Ingresa tu correo electrónico">
+                <input type="email" id="emailRecuperacion" name="email" placeholder="Ingresa tu correo electrónico">
             </div>
 
             <button type="submit" class="btn btn-accent">Recuperar contraseña</button>
