--- a/Crear_credenciales.html
+++ b/Crear_credenciales.html
@@ -7,23 +7,27 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body id="credenciales">
 
     <main class="form-container">
         <h2>Crea tus credenciales</h2>
         <p class="subtitle">Crea un nuevo usuario y una nueva contraseña.</p>
-        
-        <form action="registro_exitoso.html" method="get"> <!-- Al final, redirige a la pantalla de éxito -->
+
+        <form action="registro_exitoso.html" method="get" class="formCredenciales"> <!-- Al final, redirige a la pantalla de éxito -->
             <div class="input-group">
-                <label for="usuario">Crea tu nuevo usuario</label>
+                <label for="usuarioCredenciales">Crea tu nuevo usuario</label>
                 <i class="fa-solid fa-user input-icon"></i>
-                <input type="text" id="usuario" name="usuario" placeholder="Ingresa tu nuevo usuario" required>
+                <input type="text" id="usuarioCredenciales" name="usuario" placeholder="Ingresa tu nuevo usuario" required>
             </div>
 
             <div class="input-group">
-                <label for="password">Crea una nueva contraseña</label>
+                <label for="passwordCredenciales">Crea una nueva contraseña 
+                    <span class="tooltip" data-tooltip="Minimo 6 caracteres hasta 12: una mayúscula o especial."> 
+                        <i class="fa-solid fa-circle-exclamation"></i>
+                    </span>
+                </label>
                 <i class="fa-solid fa-lock input-icon"></i>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="passwordCredenciales" name="password" required>
                 <i class="fa-solid fa-eye-slash password-toggle-icon"></i>
             </div>
             
@@ -45,8 +49,8 @@
             <button type="submit" class="btn btn-primary">Registrarme</button>
 
             <div class="social-login mt-2">
-                 <a href="#" class="btn btn-secondary mb-2"><i class="fa-brands fa-google"></i> Identificarme con Google</a>
-                 <a href="#" class="btn btn-secondary"><i class="fa-brands fa-facebook-f"></i> Identificarme con Facebook</a>
+                 <a href="https://accounts.google.com/ServiceLogin?service=mail" class="btn btn-secondary mb-2"><i class="fa-brands fa-google"></i> Identificarme con Google</a>
+                 <a href="https://www.facebook.com/login.php" class="btn btn-secondary"><i class="fa-brands fa-facebook-f"></i> Identificarme con Facebook</a>
             </div>
         </form>
     </main>
@@ -55,5 +59,6 @@
         <p>© 2025 Joyería Los Álcazares. Todos los derechos reservados.</p>
     </footer>
 
+    <script src="./js/index.js"></script>
 </body>
 </html>
