--- a/confirmacion.html
+++ b/confirmacion.html
@@ -10,15 +10,16 @@
     <main class="form-container text-center">
         <h2>Revisa tu correo.</h2>
         <p class="subtitle">
-            Te hemos enviado un email de confirmación, haz clic en el enlace.
+            Te hemos enviado un email de confirmación, <span class="confirmacionEmail"></span> haz clic en el enlace.
         </p>
         <p>
             ¿No has recibido tu correo? Revisa tu carpeta de Spam o haz clic en Reenviarme email.
         </p>
         
         <form action="#" method="post" class="mt-2">
-             <button type="submit" class="btn btn-primary">Confirmar manualmente</button> <!-- O el nombre que prefieras para esta acción -->
+            <button type="button" class="btn btn-primary" onclick="window.open('https://accounts.google.com/ServiceLogin?service=mail', 'loginWindow', 'width=800, height=800, resizable=yes')"> Confirmar manualmente </button> <!-- O el nombre que prefieras para esta acción -->
         </form>
     </main>
+    <script src="./js/index.js"></script>
 </body>
 </html>
