--- a/carrito.html
+++ b/carrito.html
@@ -23,7 +23,7 @@
                 <a href="catalogo.html">Tienda</a> <!-- ¡Link a nuestra nueva página! -->
                 
                 <a href="inicio_sesion.html">Iniciar Sesión</a>
-                <a href="#">Contacto</a>
+                <a href="contacto.html">Contacto</a>
             </nav>
             <a href="carrito.html" class="btn-cart">
                 <i class="fa-solid fa-cart-shopping"></i>
@@ -41,38 +41,15 @@
             <div class="cart-items">
                 <!-- Artículo de ejemplo 1 -->
                 <div class="cart-item">
-                    <img src="images/anillo_placeholder.png" alt="Anillo" class="item-image">
-                    <div class="item-details">
-                        <p class="item-name">Anillo de Diamantes</p>
-                        <p class="item-ref">REF: #AD12345</p>
-                        <button class="item-remove">Eliminar</button>
-                    </div>
-                    <div class="item-quantity">
-                        <button class="quantity-btn btn-bajar">-</button><input type="text" class="cantidad" value="1" readonly><button class="quantity-btn btn-aumentar">+</button>
-                    </div>
-                    <p class="item-price precio" data-precio="200000"> $200.000 </p>
-                </div>
-                <!-- Artículo de ejemplo 2 -->
-                <div class="cart-item">
-                    <img src="images/cadena_placeholder.png" alt="Cadena" class="item-image">
-                    <div class="item-details">
-                        <p class="item-name">Cadena de Bronce</p>
-                        <p class="item-ref">REF: #CB67890</p>
-                        <button class="item-remove">Eliminar</button>
-                    </div>
-                    <div class="item-quantity">
-                        <button class="quantity-btn btn-bajar">-</button><input type="text" class="cantidad" value="2" readonly><button class="quantity-btn btn-aumentar">+</button>
-                    </div>
-                    <p class="item-price precio" data-precio="200000">$174.000</p>
                 </div>
             </div>
 
             <aside class="cart-summary">
                 <h3>Resumen de la orden</h3>
-                <div class="summary-row"><span>Subtotal</span><span>$374.000</span></div>
-                <div class="summary-row"><span>Envío</span><span>$12.000</span></div>
+                <div class="summary-row"><span>Subtotal</span><span class="totalElemento" data-precio=""></span></div>
+                <div class="summary-row"><span>Envío</span><span class="envio">$12.000</span></div>
                 <hr>
-                <div class="summary-row total"><span>Total</span><span>$386.000</span></div>
+                <div class="summary-row total"><span>Total</span><span class="pedidoTotal"></span></div>
                 <a href="#" class="btn btn-primary">Proceder al Pago</a>
                 <a href="index.html" class="btn btn-secondary mt-2">Seguir Comprando</a>
             </aside>
