Actualización de  catalogo.html - 19/07/2025
Nada destacable, se actualiza por rutina y por gestión.

--- a/catalogo.html
+++ b/catalogo.html
@@ -24,11 +24,11 @@
                 <a href="catalogo.html">Tienda</a> <!-- ¡Link a nuestra nueva página! -->
                 
                 <a href="inicio_sesion.html">Iniciar Sesión</a>
-                <a href="#">Contacto</a>
+                <a href="contacto.html">Contacto</a>
             </nav>
-            <a href="carrito.html" class="btn-cart">
-                <i class="fa-solid fa-cart-shopping"></i>
-                Tu Carrito
+                <a href="carrito.html" class="btn-cart"> 
+                    <i class="fa-solid fa-cart-shopping"> </i>
+                        Tu Carrito
             </a>
         </div>
     </header>
