Actualización de index.html - 19/07/2025
Mejoras y se añade ruta a contacto.html.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="catalogo.html">Tienda</a>
                 
                 <a href="inicio_sesion.html">Iniciar Sesión</a>
-                <a href="#">Contacto</a>
+                <a href="contacto.html">Contacto</a>
             </nav>
             <a href="carrito.html" class="btn-cart">
                 <i class="fa-solid fa-cart-shopping"></i>
