Refactor header structure in producto.html and add live server settings

--- a/producto.html
+++ b/producto.html
@@ -9,9 +9,8 @@
 </head>
 <body>
 
-    <header class="site-header">
-        <!-- Puedes copiar y pegar el mismo header del index.html aquí -->
-         <div class="header-left">
+  <header class="site-header">
+        <div class="header-left">
             <div class="logo-placeholder"><i class="fa-regular fa-gem"></i></div>
             <div class="search-bar">
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -22,11 +21,11 @@
             <nav class="main-nav">
                 <a href="index.html">Inicio</a>
                 <a href="catalogo.html">Tienda</a>
-                <a href="registro.html">Registrarse</a>
+                
                 <a href="inicio_sesion.html">Iniciar Sesión</a>
                 <a href="#">Contacto</a>
             </nav>
-            <a href="#" class="btn-cart">
+            <a href="carrito.html" class="btn-cart">
                 <i class="fa-solid fa-cart-shopping"></i>
                 Tu Carrito
             </a>
